tests/machine/x/ocaml/math_ops.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/math_ops.ml", line 3, characters 2-15:
3 |   print_endline (6 * 7)
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 3):
   1 | 
   2 | let () =
   3 |   print_endline (6 * 7)
   4 |   print_endline (7 / 2)
   5 |   print_endline (7 mod 2)
