tests/machine/x/ocaml/math_ops.ml

let () =
  print_endline (6 * 7)
  print_endline (7 / 2)
  print_endline (7 mod 2)
